fixed comment form topInputs on mobile

--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -142,6 +142,7 @@ main.mainBlog {
         width: 100%;
         .subheadComment {
             font-style: italic;
+            font-size: 18px;
         }
     }
     .commentForm {
